# VBI_RustDeveloperBootcamp

./: README.md
20230703/Homework/exercises/basic-of-rust/src/: conditions.rs  strings.rs
Lesson20230703/: Cargo.toml
Lesson20230703/Content/: Cargo.toml
Lesson20230703/Homework/: Cargo.toml
Lesson20230703/Homework/src/: functions.rs
